<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Red Handed</string>
    <string name="action_settings">Settings</string>
    <string name="action_delete">Delete Data</string>
    <string name="note_hint">Add a note</string>
    <string name="button_checkin">Check in</string>
    <string name="button_checkout">Check out</string>
    <string name="button_delete">Delete</string>
    <string name="checkbox_checkout">Check out?</string>
    <string name="checkbox_picture">Add picture?</string>
    <string name="checkbox_location">Add location?</string>
    <string name="dialog_delete_file">Delete save file and pictures?</string>

</resources>
